@@ -1,1 +1,2 @@
 DIST cuda_7.0.18_rc_linux.run 1037536115 SHA256 e81164baa1f344c3f26ebe8345ce9f38448d9a82a8cf79bae28b5df3b3e4f44c SHA512 7f1c86585ed33be4714a3c9b067cf3858b44a391ae2e2e16af0d3eaf9e7097605380bed79f97463982bf05f616f9573f83b957f080a41ac33d848e597f7d2985 WHIRLPOOL cb5c36275d9a819385f1e6ee225b47b977656c971b038001d093356aefda0afc00a289801e32935b5dec0f95b83118122118ecf150936afa8dc5958e164df82d
+DIST cuda_7.0.28_linux.run 1118797679 SHA256 d1292e9c2bbaddad24c46e0b0d15a7130831bfac0382f7159321f41ae385a5ce SHA512 f002433133e40000cbb78283e08c25f7397612957c0440605311f8921bcebd54a808069ca36b218be66a054e8afab4871b2bf1bd4d419c6f98a0d74b00a9bc78 WHIRLPOOL dcf21d2e356a1797b9e79ac9edfb3924a1d4a2914382dbe21b2172c200dd4f7d93905ac44fbc2e994ce14b7ab28e78163f4c81ddcc6cbb97e4ce085efd2d8475
