@@ -1,6 +1,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*nvidia-cuda-toolkit-7.0.28 (19 Mar 2015)
+
+  19 Mar 2015; Marius Brehler <marbre@linux.sungazer.de>
+  +nvidia-cuda-toolkit-7.0.28.ebuild:
+  Version bump
+
 *nvidia-cuda-toolkit-7.0.18-r1 (19 Feb 2015)
 
   19 Feb 2015; Justin Lecher <jlec@gentoo.org>
